fix: iam flatten default false
